--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node dist/server.js",
-    "dev": "nodemon --exec ts-node src/server.ts",
+    "dev": "cross-env NODE_ENV=development nodemon --exec ts-node src/server.ts",
+    "start": "cross-env NODE_ENV=production node dist/server.js",
     "build": "tsc",
     "test": "jest --verbose --runInBand --detectOpenHandles"
   },
@@ -25,6 +25,8 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.0",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
     "concurrently": "^8.0.1",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
@@ -44,6 +46,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.10.0"
+    "mongodb": "^6.10.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
