--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
+    "prebuild": "rimraf dist",
     "dev": "cross-env NODE_ENV=development nodemon --exec ts-node src/server.ts",
     "start": "cross-env NODE_ENV=production node dist/server.js",
     "build": "tsc",
