--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:server": "cd server && npm test",
     "install:all": "npm run install:server",
     "build": "npm run build:server",
-    "start": "npm run start:server",
+    "start": "npm run build:server && npm run start:server",
     "dev": "npm run dev:server",
     "test": "npm run test:server"
   }
