--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,12 @@
 {
   "name": "housemate",
   "version": "1.0.0",
-  "main": "app.js",
+  "type": "commonjs",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon --exec ts-node src/server.ts",
-    "start": "cross-env NODE_ENV=production node dist/server.js",
-    "build": "tsc",
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc",
+    "start": "cross-env NODE_ENV=production node dist/src/server.js",
+    "dev": "cross-env NODE_ENV=development ts-node src/server.ts",
     "test": "jest --verbose --runInBand --detectOpenHandles"
   },
   "keywords": [
