npm start fixed for frontend

--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "start:server": "cd server && npm start",
     "dev:server": "cd server && npm run dev",
     "test:server": "cd server && npm test",
-    "install:all": "npm run install:server",
+    "install:all": "npm install && cd server && npm install && cd ../client && npm install",
     "build": "npm run build:server",
-    "start": "npm run build:server && npm run start:server",
-    "dev": "npm run dev:server",
+    "start": "concurrently \"npm run start:server\" \"npm run start:client\"",
+    "start:client": "cd client && npm start",
+    "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm start\"",
     "test": "npm run test:server"
+  },
+  "dependencies": {
+    "concurrently": "^8.2.0"
   }
 }
